<resources>
    <string name="app_name">CalculatorForLev</string>
    <string name="description">Калькулятор</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_dot">.</string>
    <string name="equality">=</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="percent">%</string>
    <string name="reset">AC</string>
    <string name="_00">00</string>
    <string name="erase">←</string>
    <string name="result">Результат</string>
    <string name="history">История</string>
</resources>